// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly with a single child 1`] = `
<div
  className="root rootFieldLayoutVertical  "
>
  <WithProviderContextComponent
    id="test-id"
    inFormLayout={true}
    key=".0"
    label="Text field"
    layout="vertical"
  />
</div>
`;

exports[`rendering renders correctly with auto label width 1`] = `
<div
  className="root rootFieldLayoutHorizontal  hasRootLabelWidthAuto"
  id="test-id"
>
  <WithProviderContextComponent
    id="test-id"
    inFormLayout={true}
    key=".0"
    label="Text field"
    layout="horizontal"
  />
</div>
`;

exports[`rendering renders correctly with custom label width 1`] = `
<div
  className="root rootFieldLayoutHorizontal  hasRootLabelWidthCustom"
  id="test-id"
  style={
    Object {
      "--rui-custom-label-width": "300px",
    }
  }
>
  <WithProviderContextComponent
    id="test-id"
    inFormLayout={true}
    key=".0"
    label="Text field"
    layout="horizontal"
  />
</div>
`;

exports[`rendering renders correctly with multiple children 1`] = `
<div
  className="root rootFieldLayoutVertical  "
>
  <WithProviderContextComponent
    id="test-id-1"
    inFormLayout={true}
    key=".0"
    label="Text field 1"
    layout="vertical"
  />
  <WithProviderContextComponent
    id="test-id-2"
    inFormLayout={true}
    key=".1"
    label="Text field 2"
    layout="vertical"
  />
  <WithProviderContextComponent
    id="test-id-3"
    inFormLayout={true}
    key=".2"
    label="Text field 3"
    layout="vertical"
  />
</div>
`;
